@@ -154,6 +154,12 @@ This is of most benefit when the
 option is used, which can cause blocks to be read more than once.
 Setting the size to 0 will disable the cache.
 .TP
+.B --separate-regs
+This option can be used when multiple regions are supplied in the command line
+and the user needs to quickly see which file records belong to which region.
+For this, an empty line is inserted in the output after a group of records
+corresponding to one region.
+.TP
 .BI "--verbosity " INT
 Set verbosity of logging messages printed to stderr.
 The default is 3, which turns on error and warning messages;
